Force lowercase letters for object ids; fix for not-all-lowercase names

General
*Force lower case letters for object identifiers (except for widget names)
**This adds consstency and fixes issue with
**Also fix support for objects renamed to not-all-lowercase in earlier version of Kexi.
BUG:306523
FIXED-IN:2.5.3
REVIEW:106411