kexi/kexidb/connection.cpp
@@ -871,7 +871,8 @@ QStringList Connection::objectNames(int objType, bool* ok)
     for (c->moveFirst(); !c->eof(); c->moveNext()) {
         QString name = c->value(0).toString();
         if (KexiUtils::isIdentifier(name)) {
-            list.append(name);
+            list.append(name.toLower()); /* .toLower() fixes support for objects renamed
+                                            to not-all-lowercase in Kexi <= 2.5.2 (bug 306523) */
         }
     }
 
@@ -2401,7 +2402,8 @@ bool Connection::setupObjectSchemaData(const RecordData &data, SchemaData &sdata
     if (!ok) {
         return false;
     }
-    sdata.m_name = data[2].toString();
+    sdata.m_name = data[2].toString().toLower(); /* .toLower() fixes support for objects renamed
+                                                    to not-all-lowercase in Kexi <= 2.5.2 (bug 306523) */
     if (!KexiUtils::isIdentifier(sdata.m_name)) {
         setError(ERR_INVALID_IDENTIFIER, i18n("Invalid object name \"%1\"", sdata.m_name));
         return false;
